
Sat Feb  5 03:20:49 GMT 2000
(gilbertt)

Preliminary wheelmouse support for sliders.

-------------------------------------------------------------------------------

Wed Feb 16 11:18:58 EST 2000
(Christian)

Added a timer to E-Mountbox that keeps the display up to date.

-------------------------------------------------------------------------------

Sun Feb 27 13:05:15 GMT 2000
(gilbertt)

Epplet-side fix for the "millions of remember requests" bug.
I'll implement a better fix when I add a new ipc call to e :)

-------------------------------------------------------------------------------

Sun Feb 27 14:52:36 GMT 2000
(gilbertt)

Okay. E has the new ipc call. However, because epplets can't demand that
people have e > 0.16.4, the old behaviour is the default. Please ./configure
--enable-new-remember to test the new behaviour. (You'll need cvs e as of 2
seconds ago) It should be much streamlined. Especially for you guys on
interesting hardware =)

-------------------------------------------------------------------------------

Mon Feb 28 12:14:11 GMT 2000
(gilbertt)

Fixed Epplet_register_event_handler, prompted by email from Alexandre David
<adavid@DoCS.UU.SE>. His patch was incorrect though, and the proper fix is
to change the line where the event handler is called. (His patch changed
only one definition of it, in the wrong place, and broke epplets ;)

-------------------------------------------------------------------------------

Mon Feb 28 19:50:20 GMT 2000
(gilbertt)

64-bit fixes from Bob Arendt <rdarendt@cwcom.net>

-------------------------------------------------------------------------------

Fri Mar  3 14:43:37 PST 2000
(KainX)

Added Jerome De Greef's E-Exec patch and fixed several warnings.

-------------------------------------------------------------------------------

Tue Mar  7 19:15:00 GMT 2000
(gilbertt)

Fix for E-Power from Roger Sherwood <rogersherwood@hotmail.com>
Now it looks for the pngs in the right place.
